2017-11-02  Markus Gans  <guru.mail@muenster.de>
	* Move fonts into the root directory 

2017-10-30  Markus Gans  <guru.mail@muenster.de>
	* Fix scrollview functionality with new inheritance structure
	* Add a standardized close confirmation dialog
	* Only <final/final.h> can now be directly integrated in programs

2017-10-29  Markus Gans  <guru.mail@muenster.de>
	* Adaptation of the inheritance diagrams in the header files
	* Add a standardized cb_exitApp callback method to FApplication

2017-10-27  Markus Gans  <guru.mail@muenster.de>
	* FWidget now inherits directly from FObject 

2017-10-23  Markus Gans  <guru.mail@muenster.de>
	* A FListView tree branch can now be expand and collapsed 
	  with a single click

2017-10-19  Markus Gans  <guru.mail@muenster.de>
	* Optimized Color palette (less saturated colors)

2017-10-18  Markus Gans  <guru.mail@muenster.de>
	* Expand or collapse a tree element with a double-click
	* FListView::adjustViewport() improved

2017-10-15  Markus Gans  <guru.mail@muenster.de>
	* FObject double free prevention of fc::empty_string

2017-10-14  Markus Gans  <guru.mail@muenster.de>
	* Fixed a bug in the FObject check of parent objects
	* Replace the deprecated readdir_r function (CVE-2013-4237)
	* First implementation of a tree view in the FListView 
	  class (alpha state)

2017-10-02  Markus Gans  <guru.mail@muenster.de>
	* DECSCUSR - Set Cursor Style support for VTE >= 0.40.0 and 
	  gnome-terminal >= 3.16
	* Checks if the FScrollview viewport fits into the print area

2017-10-02  Markus Gans  <guru.mail@muenster.de>
	* SGR and URXVT mouse support for coordinates greater-than 
	  255 columns or lines
	* Add copyright information to the source files

2017-09-21  Markus Gans  <guru.mail@muenster.de>
	* New data type FStringList introduced
	* Stream and assignment operator support for FLineEdit

2017-09-20  Markus Gans  <guru.mail@muenster.de>
	* FString has now got its own streaming functionality for 